--- a/Apzy.html
+++ b/Apzy.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/Finanzy.png" alt="Logo">
             </div>
             <ul>
                 <li><a href="#home">Home</a></li>
